raffia/tests/error/scss/value/function-call/comments-in-arbitrary-arg-1.snap
---
source: raffia/tests/error.rs
---
error: unexpected whitespace or comments
  ┌─ comments-in-arbitrary-arg-1.scss:2:15
  │
2 │   width: fn($a/*a*/...);
  │               ^^^^^


